сдалал главную страницу

--- a/index.html
+++ b/index.html
@@ -1,14 +1,76 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rise</title>
-  </head>
-  <body>
-    <main>
-      
-    </main>
-  </body>
+<!doctype html>
+<html lang="ru">
+
+<head>
+  <!-- Обязательные метатеги -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="./style/style.css">
+
+  <title>Rise</title>
+</head>
+
+<body>
+  <div class="conteiner-fluid g-0">
+    <div class="content vh-100 d-flex flex-column justify-content-between">
+      <main class="container">
+        <section class="row clearfix w-100 g-0">
+          <div class="col-12 col-xl-5">
+            <div class="info text-start">
+              <img class="info__logo" src="./images/logo.svg" alt="logo">
+              <div class="info__text">
+                <h1 class="info__title">Welcome to the heightened life.</h1>
+                <span class="info__subtitle d-block">Studio to 3 BR Luxury Rentals</span>
+                <span class="info__desc d-block mt-1 mt-lg-3">comming summer 2021 </span>
+                <div class="info__btn">
+                  <a href="#" class="button d-inline-flex justify-content-center align-items-center">Join Our Priority
+                    List
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-xl-7">
+            <div class="elements">
+              <div class="elements__1"></div>
+              <figure class="elements__figure">
+                <img src="./images/img.png" alt="img" class="elements__img">
+              </figure>
+              <div class="elements__2"></div>
+              <div class="elements__2-1"></div>
+              <div class="elements__3"></div>
+            </div>
+          </div>
+        </section>
+      </main>
+
+      <footer class="footer d-flex justify-content-between align-items-xl-end align-items-center footer__icons">
+        <div class="row">
+          <div class="footer__icons">
+            <img src="./images/footer/Vector_Smart_Object.png" alt="icon__modern" class="icon__modern">
+            <img src="./images/footer/Vector_Smart_Objecta.png" alt="icon__home" class="icon__home">
+          </div>
+        </div>
+        <p class="footer__copy m-0">Copyrights 2021 &copy; Rise LIC</p>
+        <p class="footer__privacy m-0">Privacy Policy</p>
+      </footer>
+    </div>
+  </div>
+  </div>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+  </script>
+
+  <!-- barba -->
+  <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script>
+  <script src="./js/main.js"></script>
+</body>
+
 </html>
