добал страницу с формой

--- a/index.html
+++ b/index.html
@@ -23,19 +23,20 @@
           <div class="col-12 col-xl-5">
             <div class="info text-start">
               <img class="info__logo" src="./images/logo.svg" alt="logo">
-              <div class="info__text">
+              <div class="info__text d-flex flex-column align-items-center">
                 <h1 class="info__title">Welcome to the heightened life.</h1>
                 <span class="info__subtitle d-block">Studio to 3 BR Luxury Rentals</span>
                 <span class="info__desc d-block mt-1 mt-lg-3">comming summer 2021 </span>
                 <div class="info__btn">
-                  <a href="#" class="button d-inline-flex justify-content-center align-items-center">Join Our Priority
+                  <a href="/form.html" class="button d-inline-flex justify-content-center align-items-center">Join Our
+                    Priority
                     List
                   </a>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-12 col-xl-7">
+          <div class="col-12 col-xl-7 wrap-img">
             <div class="elements">
               <div class="elements__1"></div>
               <figure class="elements__figure">
