сделал страницу с формой

--- a/form.html
+++ b/form.html
@@ -22,12 +22,44 @@
       <div class="content__svg-1"></div>
       <div class="content__svg-2"></div>
       <div class="content__svg-3"></div>
-      <section class="container rise">
-        <h1 class="rise__title">
-          Join Our Priority List
-        </h1>
-        <div class="form-wrap mt-5"></div>
-      </section>
+      <a href="/" class="btn-close"></a>
+      <main class="main">
+        <section class="container rise">
+          <h1 class="rise__title">
+            Join Our Priority List
+          </h1>
+          <div class="form-wrap mt-5">
+            <form class="form mb-3">
+              <fieldset class="form__fildset w-100">
+                <div class="mb-3">
+                  <input type="text" class="form-control form__input" placeholder="First & Last Name">
+                </div>
+                <div class="mb-3">
+                  <input type="email" class="form-control form__input" placeholder="Email Address">
+                </div>
+                <select class="form-select form__select mt-3">
+                  <option selected>Preferred Unit Type</option>
+                </select>
+                </select>
+                <select class="form-select  form__select mt-3">
+                  <option selected>How Did You Hear About Us?</option>
+                </select>
+                <button type="submit" class="form__btn mt-5">Submit</button>
+              </fieldset>
+            </form>
+          </div>
+        </section>
+      </main>
+      <footer class="footer d-flex justify-content-between align-items-xl-end align-items-center footer__icons">
+        <div class="row">
+          <div class="footer__icons">
+            <img src="./images/footer/Vector_Smart_Object.png" alt="icon__modern" class="icon__modern">
+            <img src="./images/footer/Vector_Smart_Objecta.png" alt="icon__home" class="icon__home">
+          </div>
+        </div>
+        <p class="footer__copy m-0">Copyrights 2021 &copy; Rise LIC</p>
+        <p class="footer__privacy m-0">Privacy Policy</p>
+      </footer>
     </div>
   </div>
 
