--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+  <link rel="stylesheet" href="./style/form.css">
   <link rel="stylesheet" href="./style/style.css">
+
 
   <title>Rise</title>
 </head>
 
-<body>
+<body data-barba="wrapper">
   <div class="conteiner-fluid g-0">
-    <div class="content vh-100 d-flex flex-column justify-content-between">
+    <div data-barba="container" data-barba-namespace="home"
+      class="content vh-100 d-flex flex-column justify-content-between">
       <main class="container">
         <section class="row clearfix w-100 g-0">
           <div class="col-12 col-xl-5">
@@ -61,31 +64,32 @@
         <p class="footer__copy m-0">Copyrights 2021 &copy; Rise LIC</p>
         <p class="footer__privacy m-0">Privacy Policy</p>
       </footer>
-      <!-- Modal -->
-      <div class="modal fade" id="modalImg" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-          <div class="modal-content">
-            <img src=./images/img.png alt=img />
-          </div>
-
-        </div>
-        <div class="btn-close" data-bs-dismiss="modal"></div>
-      </div>
-      <script type="text/javascript">
-
-      </script>
     </div>
   </div>
+  <!-- Modal -->
+  <div class="modal fade" id="modalImg" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+      <div class="modal-content">
+        <img src=./images/img.png alt=img />
+      </div>
+    </div>
+    <div class="btn-close btn-close-white close" data-bs-dismiss="modal"></div>
   </div>
+</body>
 
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-  </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+</script>
 
-  <!-- barba -->
-  <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script>
-  <script src="./js/main.js"></script>
+<!-- barba -->
+<script src="./plugins/@barba/core/dist/barba.umd.js"></script>
+
+<!-- GSAP -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+
+
+<script src="./js/main.js"></script>
 </body>
 
 </html>
